# itax

./: .gitignore  BUGS.md  CMakeLists.txt  clean  fast  fast_build  install  opt_build  run
cli/: CMakeLists.txt  main.cpp  presenter.cpp  presenter.h  table_formatter.cpp  table_formatter.h
libcore/: CMakeLists.txt  algos.h  argparse.cpp  argparse.h  bracket.cpp  bracket.h  cash_amount.cpp  cash_amount.h  currency_amount.cpp  currency_amount.h  defs.h  format.cpp  format.h  income_slice.cpp  income_slice.h  line_item.cpp  line_item.h  rule.cpp  rule.h  rule_items.cpp  rule_items.h  shortcuts.h  tax_return.cpp  tax_return.h
libcore/tests/: CMakeLists.txt  argparse_test.cpp  bracket_test.cpp  cash_amount_test.cpp  currency_amount_test.cpp  format_test.cpp  income_slice_test.cpp  line_item_test.cpp  rule_items_test.cpp  rule_test.cpp  tax_return_test.cpp
librules/: CMakeLists.txt  rules_registry.cpp  rules_registry.h  ruleset.cpp  ruleset.h  rulesets_registry.cpp  rulesets_registry.h  tax_calc.cpp  tax_calc.h
librules/collections/: aus.cpp  aus.h
librules/collections/tests/: CMakeLists.txt  aus_fy13_lito_test.cpp  aus_fy19_lmito_test.cpp
librules/db/: aus.h
librules/tests/: CMakeLists.txt  rules_registry_test.cpp  ruleset_test.cpp  rulesets_registry_test.cpp
